k8s/dev/cache-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: cache-deployment
spec:
    replicas: 1
    selector:
        matchLabels:
            component: cache
    template:
        metadata:
            labels:
                component: cache
        spec:
            containers:
                - name: cache
                  image: nakash2050/employee-cache
                  ports:
                    - containerPort: 5001
